[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devhelper"
version = "0.0.1"
description = "A lightweight developer toolkit: logging, env checker, timing, formatting, and more."
readme = "README.md"
authors = [{ name = "Seu Nome", email = "seuemail@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []
